2011-03-08  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (cut-current-child, remove-current-child)
	(delete-current-child): Hide the current child before doing the
	action.

	* src/clfswm-internal.lisp (show-all-children): Hide windows not
	in the current root before displaying those in current root.
	Remove all hide-all unnecessary calls.

	* src/clfswm-configuration.lisp (save-variables-in-conf-file):
	Save only variables with a different value than there original
	value.

2011-03-07  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-info.lisp (show-config-variable): Use the new
	defconfig method.

	* src/clfswm-autodoc.lisp (produce-configuration-variables): Use
	the new defconfig method.

	* src/clfswm-configuration.lisp (create-configuration-menu):
	Change the config system with a more lispy one and a less string
	based one: (defconfig name value group doc).


2011-03-06  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (show-all-children): Simplify the
	selection method.
	(show-child): Display an unmanaged window whe  it's the current
	child.
	(show-all-children): add the ability to display all child from
	*root-frame* and hide all those who are not in *current-root*.
	-> remove hide-all-children when needed.

	* src/xlib-util.lisp (move-window,resize-window): Add a
	*color-move-window* border when moving or resizing a window.

2011-03-04  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (show-all-children): Perform only one
	recusion on the clfswm tree: calculate geometry and place child in
	one pass.

2011-03-03  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (show-all-children): Rethink of display
	child order to prevent very annoying flickering.

2011-02-27  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (query-yes-or-no): New function.

	* src/clfswm-configuration.lisp (reset-all-config-variables): New