@@ -116,6 +116,12 @@
   (define-volume-key ("m") 'volume-mute)
   (define-volume-key ("l") 'volume-lower)
   (define-volume-key ("r") 'volume-raise)
+  (define-volume-key ("Down") 'volume-lower)
+  (define-volume-key ("Up") 'volume-raise)
+  (define-volume-key ("Left") 'volume-lower)
+  (define-volume-key ("Right") 'volume-raise)
+  (define-volume-key ("PageUp") 'volume-lower)
+  (define-volume-key ("PageDown") 'volume-raise)
   (define-volume-key ("Return") 'leave-volume-mode)
   (define-volume-key ("Escape") 'leave-volume-mode)
   (define-volume-key ("g" :control) 'leave-volume-mode)
